--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@rollup/plugin-terser": "^0.4.4",
     "@tsconfig/svelte": "^5.0.4",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
@@ -72,11 +74,12 @@
     "@vscode/test-electron": "^2.4.1",
     "concurrently": "^9.1.2",
     "eslint": "^9.21.0",
-    "rollup-plugin-svelte": "^7.2.2",
+    "rollup": "^2.79.2",
+    "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^5.25.3",
-    "svelte-check": "^4.1.5",
-    "svelte-preprocess": "^6.0.3",
+    "svelte": "^3.59.2",
+    "svelte-check": "^3.8.6",
+    "svelte-preprocess": "^5.1.4",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
     "webpack": "^5.98.0",
