--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "devhelperai",
   "displayName": "DevHelperAI",
   "description": "",
+  "publisher": "foxprogrammer",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.98.0"
